# hackathon_velib

./: .python-version  pyproject.toml
data/excel/01_Courses_usagers/: Descriptif_courses_usagers.txt
data/excel/03_Régulation_mouvements_stations/: Descriptif_régulation_mouvements_stations.txt
data/excel/05_Signalements_vélos_abandonnnés/: Descriptif_signalements_vélos_abandonnés.txt
data/excel/06_Flotte_de_véhicules/: Descriptif_Flotte_de_véhicules.txt
hackathon_velib/: excel_to_csv_converter.py
